# Lung-Damage-Detection-CLI

./: .env.example  .gitignore  LICENSE  README.md  README_RU.md  pyproject.toml
src/: data.py  main.py  model.py  settings.py  tester.py  trainer.py
