[project]
name = "LungDamageDetectionCLI"
version = "1.0.0"
description = "CLI application for training and inferring lung injury detection model"
authors = [
    {name = "grottI0", email = "chernega.bk@gmail.com"},
]
keywords = ["detection", "lung injuries", "dicom", "unet", "pytorch", "torch", "cli", "computer vision", "medicine", "covid-19"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "torch==2.2.0",
    "pydicom==2.4.4",
    "torchvision==0.17.0",
    "numpy<2.0.0",
    "tqdm==4.66.2",
    "scikit-learn==1.4.1.post1",
    "pydantic-settings>=2.3.4",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/mtuciru/Lung-Damage-Detection-CLI"
Repository = "https://github.com/mtuciru/Lung-Damage-Detection-CLI.git"

[project.scripts]
ldd-cli = "main:run_cli"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"